# linuxfilemanager

./: .gitignore  .gitmodules  File Managers examples.txt  README.md  ROADMAP.md  TODOS.md  main.py  pyproject.toml
data/: linux-file-manager.desktop  linux-file-manager.metainfo.xml
debian/: changelog  control  copyright  linux-file-manager.lintian-overrides  linux-file-manager.metainfo.xml  linuxfm  linuxfm.1  rules
debian/upstream/: metadata
lfm/: __init__.py  app.py  daemon.py
lfm/core/: __init__.py  config.py  translator.py
lfm/extensions/: __init__.py  manager.py
lfm/models/: __init__.py  file_system_model.py
lfm/services/: bookmark_service.py  file_operations.py  indexer.py  indexing.py  (+10 more)
lfmapp/: app.py  daemon.py
scripts/: __init__.py  import_tabler_icon.py  profile_memory.py  simulate_workers.py  test_indexing.py
tests/: test_app_data.py  test_app_metadata.py  test_config.py  test_daemon.py  test_debian_packaging.py  test_extension_manager.py  test_extractor_service.py  test_file_operations.py  test_file_system_model.py  test_main_window.py  test_memory_profile.py  test_menus.py  test_network_service.py  test_open_with.py  test_operation_history.py  test_preview_worker.py  test_printing.py  test_property_dialog.py  test_search_service.py  test_sidebar.py  test_tabler_icon_import.py  test_tag_service.py  test_terminal_service.py  test_textindex_service.py  test_tpm_control.py  test_translations.py  test_translator.py  test_ui_icons.py  test_vault_service.py  test_worker_threads.py  test_workspace.py  test_xdg.py
translations/: app_es.ts
(+49 files in other folders)
